Start single-cell tutorial

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 	    </div>
           </div>
         </div>
-        <div data-parallax="active" class="header-filter" style="background-image: url(&quot;/assets/specto_test.png&quot;);"></div>
+        <div data-parallax="active" class="header-filter" style="background-image: url(&quot;https://hnn.brown.edu/wp-content/uploads/2018/03/specto_test.png&quot;);"></div>
       </div>
     </header>
     <main id="content" class="main-content main default" role="main">
