--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,7 +12,7 @@
     background-position: center center;
     background-size: cover;
   text-align: center;
-  background-image: url("/assets/specto_test.png");
+  background-image: url("https://hnn.brown.edu/wp-content/uploads/2018/03/specto_test.png");
 }
 .page-header .container {
     color: #fff;
