--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         <div class="container" style="padding-top: 80px;">
           <div class="row">
             <div class="col-md-10 col-md-offset-1 text-center">
-              <h1 class="hestia-title">Installation</h1>
+              <h1 class="hestia-title">Tutorials</h1>
 	    </div>
           </div>
         </div>
