--- a/html-styling/stylesheet.css
+++ b/html-styling/stylesheet.css
@@ -1,3 +1,119 @@
+/* start injections */
+
+/* fix page width */
+
+#wrapper {
+  margin: 0 auto;
+  width: 900px; /* set page width */
+}
+
+/* scroll button */
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: #e91e63; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+}
+
+/* header container */
+.headercontainer {
+  display: flex;
+  position: relative;
+  height: 300px;
+  min-width: 900px;
+  background-image: url(images/brainheader-darkened.png);
+  background-size:cover;
+  background-position:center;
+  background-repeat:no-repeat;
+  background-blend-mode: darken;
+  font-family: sans-serif;
+  font-size: 2.4em;
+  font-weight: 700;
+  text-align: center;
+  color: #FFFFFF;
+  vertical-align: middle;
+}
+
+/* header text */
+.headertext {
+  position: absolute;
+  color: #FFFFFF;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Navbar */
+/* The navigation bar */
+.navbar {
+  overflow: hidden;
+  box-shadow: 0 1px 10px -6px rgba(0,0,0,0.42), 0 1px 10px 0 rgba(0,0,0,0.12), 0 4px 5px -2px rgba(0,0,0,0.1);
+  background-color: #FFF;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+  height: 70px;
+  z-index: 9999;
+}
+
+/* Image inside navbar */
+.navbar img {
+  float: left;
+  height: 50px;
+  width: auto;
+  padding-top: 10px;
+}
+
+/* Links inside the navbar */
+.navbar a {
+  float: right;
+  display: block;
+  color: #3C4858 !important;
+  font-family: sans-serif;
+  font-size: 14px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 70px;
+  text-decoration: none;
+  margin-left: 15px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+/* Change background on mouse-over */
+.navbar a:hover {
+  /*background: #ddd;
+  border-radius: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  line-height: 50px;*/
+  color: #e91e63 !important;
+}
+
+/* Main content */
+.main {
+  margin-top: 70px; /* Add a top margin to avoid content overlay */
+}
+
+/* end injections */
+
+/* start basic styling */
+
 .emoji {
   max-width: 1em !important;
 }
@@ -86,12 +202,12 @@ h4,
 h5,
 h6 {
   line-height: 1.2;
-  margin-top: 1.5em;
+  margin-top: 1.0em;
   margin-bottom: 0.5em;
   color: #030303;
 }
 h1 {
-  font-size: 2.4em;
+  font-size: 2.0em;
   font-weight: 300;
 }
 h2 {
@@ -100,11 +216,11 @@ h2 {
 }
 h3 {
   font-size: 1.5em;
-  font-weight: 500;
+  font-weight: 400;
 }
 h4 {
   font-size: 1.2em;
-  font-weight: 600;
+  font-weight: 400;
 }
 h5 {
   font-size: 1.1em;
@@ -123,6 +239,15 @@ del {
 a,
 a code {
   color: black;
+}
+a:link {
+color: #e91e63;
+}
+a:visited {
+color: #e91e63;
+}
+a:hover {
+color: blue;
 }
 img {
   max-width: 100%;
@@ -628,52 +753,5 @@ pre.editor-colors .fold-marker:after {
 .syntax--source.syntax--python .syntax--variable.syntax--parameter {
   color: #986801;
 }
-#wrapper {
-  margin: 0 auto;
-  width: 900px;
-}
-#myBtn {
-  display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: red; /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
-}
-#myBtn:hover {
-  background-color: #555; /* Add a dark-grey background on hover */
-}
-/* header container */
-.headercontainer {
-  display: flex;
-  position: relative;
-  height: 300px;
-  min-width: 900px;
-  background-image: url(images/brainheader-darkened.png);
-  background-size:cover;
-  background-position:center;
-  background-repeat:no-repeat;
-  background-blend-mode: darken;
-  font-family: sans-serif;
-  font-size: 2.4em;
-  font-weight: 700;
-  text-align: center;
-  color: #FFFFFF;
-  vertical-align: middle;
-}
-	    
-/* header text */
-.headertext {
-  position: absolute;
-  color: #FFFFFF;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+
+/* end basic styling */
