--- a/html-styling/stylesheet.css
+++ b/html-styling/stylesheet.css
@@ -14,14 +14,22 @@
   bottom: 20px; /* Place the button at the bottom of the page */
   right: 30px; /* Place the button 30px from the right */
   z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
+  border: none;  /* Remove borders */
   outline: none; /* Remove outline */
   background-color: #e91e63; /* Set a background color */
   color: white; /* Text color */
   cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
+  /* padding: 15px; Some padding */
+  padding: 0px; /* Some padding */
   border-radius: 10px; /* Rounded corners */
   font-size: 18px; /* Increase font size */
+  /* below code makes the button circular */
+  width:50px;
+  height:50px;
+  border-radius: 50%;
+  box-shadow: 0 1px 10px -6px rgba(0,0,0,0.42), 0 1px 10px 0 rgba(0,0,0,0.12), 0 4px 5px -2px rgba(0,0,0,0.1);
+  text-align:center;
+  text-decoration:none;
 }
 
 #myBtn:hover {
@@ -175,7 +183,7 @@ table {
 body {
   padding: 0em;
   margin: 0em;
-  font-size: 1.2em;
+  font-size: 1.3em;
   color: #555;
   background-color: white;
   overflow: auto;
@@ -207,15 +215,15 @@ h6 {
   color: #030303;
 }
 h1 {
-  font-size: 2.0em;
+  font-size: 1.8em;
   font-weight: 300;
 }
 h2 {
-  font-size: 1.8em;
+  font-size: 1.6em;
   font-weight: 400;
 }
 h3 {
-  font-size: 1.5em;
+  font-size: 1.4em;
   font-weight: 400;
 }
 h4 {
@@ -278,6 +286,8 @@ td {
 code {
   color: #030303;
   background-color: #f0f0f0;
+  display: block;
+  padding: 20px;
 }
 pre.editor-colors {
   margin: 1.5em 0;
