--- a/html-styling/stylesheet.css
+++ b/html-styling/stylesheet.css
@@ -117,7 +117,7 @@ p {
   font-family: sans-serif;
   font-size: 14px;
   text-align: center;
-  vertical-align: middle;
+  /* vertical-align: middle; */
   line-height: 70px;
   text-decoration: none;
   margin-left: 15px;
@@ -156,6 +156,39 @@ p {
 img.imgcenter100{
   width: 100%;
   text-align: center;
+}
+
+/* 
+# --------------------
+# Callout box
+# -------------------- 
+*/
+.callout {
+  background-color: rgba(128, 128, 128, 0.1);
+  padding: 2px; /* Padding around the callout */
+  border-radius: 5px; /* Rounded corners */
+  margin: 1.2em 0; /* Margin for spacing */
+}
+
+.callout-table {
+  width: 100%; 
+  border-collapse: collapse; /* Prevent double borders */
+  margin: 0;
+}
+
+.emoji-cell {
+  width: 5px; 
+  vertical-align: top; 
+  font-size: 1.4em;
+  line-height: 1.4;
+  text-align: justify;
+}
+
+.text-cell {
+  vertical-align: top;
+  font-size: 1.4em;
+  line-height: 1.4;
+  text-align: justify;
 }
 
 /* 
@@ -397,3 +430,9 @@ h2#tutorial-table-of-contents + ol {
 h2#tutorial-table-of-contents + ol li {
   line-height: 0.8 !important; 
 }
+
+/* 
+# --------------------
+# Popout image
+# -------------------- 
+*/
